--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,7 @@
   
   --brand-blue: linear-gradient(93.54deg, #1c42ff -3.63%, #3c99ff 98.73%);
   --brand-blue-light: linear-gradient(93.54deg, #4a68ff -3.63%, #67b0ff 98.73%);
+  --gradient-blue: linear-gradient(180deg, #0F53FF 0%, #63AFFF 40.87%);
 }
 
 :root {
@@ -200,6 +201,14 @@
 
 .button-default:hover {
   background: linear-gradient(93.54deg, #4a68ff -3.63%, #67b0ff 98.73%);
+}
+
+/* Gradient text */
+.text-gradient-blue {
+  background: var(--gradient-blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 .font-matter {
