--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -748,3 +748,11 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.video-player-provider {
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
