Update text color for tertiary text in globals.css to improve contrast. Comment out Stars component in CaruselCard for potential future use, enhancing code clarity.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@
 
   --TEXT-PRIMARY: #ffffff;
   --TEXT-SECONDARY: #ffffffb8;
-  --TEXT-TERTIARY: #ffffff99;
+  --TEXT-TERTIARY: #BFBFBF;
 
   --BG-DARK: #000000;
   --BG-WHITE: #ffffff;
@@ -159,7 +159,7 @@
 
   --TEXT-PRIMARY: #ffffff;
   --TEXT-SECONDARY: #ffffffb8;
-  --TEXT-TERTIARY: #ffffff99;
+  --TEXT-TERTIARY: #BFBFBF;
 
   --BG-DARK: #000000;
   --BG-WHITE: #ffffff;
